--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,10 +1,9 @@
-config:
-  ServerKey: "test"
-  Servername: "测试"
-  Port: 8888
-  LoginAPIPublic: "http://10.68.41.36:9000"
-  UserAPI: "http://10.68.41.32:8500/api"
-  Sentry:
-    Url: "http://964d306156fe45ddad42b725ade8d247:e79757b5d2f94d839439d440b7096399@10.68.41.33:9000/2"
-  Jaeger:
-    Endpoint: "http://10.68.41.33:8998/api/traces"
+server_key: test
+server_name: 测试
+port: 8888
+login_api_public: http://10.68.41.36:9000
+user_api: http://10.68.41.32:8500/api
+sentry:
+  url: http://964d306156fe45ddad42b725ade8d247:e79757b5d2f94d839439d440b7096399@10.68.41.33:9000/2
+jaeger:
+  endpoint: http://10.68.41.33:8998/api/traces
